# polars_normal_stats

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
benchmarks/: benchmark_core.py  benchmark_scipy.py  comparison_results.md
polars_normal_stats/: __init__.py
src/: lib.rs
tests/: test_normal.py
