[package]
name = "polars_normal_stats"
version = "0.3.0"
edition = "2021"

[lib]
name = "polars_normal_stats"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.54.0", default-features = false }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"] }
pyo3-polars = { version = "0.27.0", features = ["derive", "dtype-struct", "dtype-array"] }
statrs = "0.18"
serde = { version = "1", features = ["derive"] }
